--- a/src/Home.css
+++ b/src/Home.css
@@ -3,9 +3,7 @@ html {
 }
 
 .bg-container {
-    background-image: url("../images/background.jpg");
-    background-size: cover;
-    /* box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25); */
+    background: linear-gradient(to right, rgba(225,225,225, 0.8), rgba(225,225,225, 0.8)), url("../images/background.svg");
 }
 
 body::-webkit-scrollbar {
